<resources>
    <string name="app_name">Retrowave Radio</string>
    <string name="choosestorage">Select location</string>
    <string name="copytobuffer">Copy to buffer</string>
    <string name="donate">Support developer</string>
    <string name="downloadbegin">Start downloading</string>
    <string name="downloadcomplete">Download complete</string>
    <string name="error">Error</string>
    <string name="exitdialog">Do you really want to leave?</string>
    <string name="externalstorage">Internal storage</string>
    <string name="filealrearydownloaded">File already downloaded</string>
    <string name="listenthis">"Listen this:  "</string>
    <string name="loading">Downloading...</string>
    <string name="logoinfo">Here you can go to the official site or support the developer financially</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="share">Share</string>
    <string name="site">Site</string>
    <string name="timerset">Set sleep timer</string>
    <string name="timersetinfo">Sleep timer is set</string>
    <string name="timerstop">Stop timer</string>
    <string name="timerwasstop">Timer stopped</string>
    <string name="vkgroup">VK group</string>
    <string name="waitdownload">Wait until the end of the previous download</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="previous">Previous</string>
    <string name="addtofavorite">Add to favorites</string>
    <string name="email">Email</string>
    <string name="favorite">Favorites</string>
    <string name="login">Log in</string>
    <string name="loginalready">Login successful</string>
    <string name="loginreg">Log in/Registration</string>
    <string name="loginsuccess">Login successful</string>
    <string name="password">Password</string>
    <string name="register">Registration</string>
    <string name="regsuccess">You registered</string>
    <string name="switchtoplaylist">Switch to playlist mode</string>
    <string name="switchtoradio">Switch to radio mode</string>
    <string name="unloginexit">Log out</string>
    <string name="reginfo">First fill in the fields</string>
    <string name="start">Start</string>
    <string name="setminutes">Set the number of minutes</string>
    <string name="about">About</string>
    <string name="drivingmode">Driving mode</string>
    <string name="goodmorning">Good morning</string>
    <string name="goodday">Good day</string>
    <string name="goodevening">Good evening</string>
    <string name="goodnight">Good night</string>
    <string name="listensomething">Let\'s listen to something</string>
    <string name="aboutinfo">Unofficial application for Retrowave Radio (www.retrowave.ru) in all it neon glory. Stream hottest hand-picked synthwave music for free, more than 700 tracks.</string>
    <string name="initialization">Initialization...</string>
    <string name="donatemethods">Other methods</string>
    <string name="swipeinfo">Swipe to switch tracks</string>
    <string name="sound">Startup sound</string>
</resources>
