<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollViewSliderMenu"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/timePicture"
                android:layout_width="500dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/day" />

            <ImageView
                android:id="@+id/colorLineMenu"
                android:layout_width="0dp"
                android:layout_height="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timePicture"
                fancy:srcCompat="@color/colorAccent" />


            <ImageView
                android:id="@+id/menuBlurPanel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/timePicture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/timeTxt"
                fancy:srcCompat="@color/colorBlur" />

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/goodday"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                app:layout_constraintBottom_toTopOf="@+id/funTxt"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/funTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/listensomething"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/timePicture"
                app:layout_constraintStart_toStartOf="parent" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/siteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colorLineMenuCenter"
                fancy:fb_borderColor="@color/colorAccent"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorTransperent"
                fancy:fb_focusColor="@color/colorAccent"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/site"
                fancy:fb_textColor="#FFFFFF" />


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/downloadBtn"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/shareBtn"
                app:layout_constraintTop_toBottomOf="@+id/colorLineMenu"
                fancy:fb_defaultColor="@color/colorAccent"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_iconResource="@drawable/save"
                fancy:fb_radius="64dp">
            </mehdi.sakout.fancybuttons.FancyButton>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/shareBtn"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colorLineMenu"
                fancy:fb_defaultColor="@color/colorAccent"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_iconResource="@drawable/share"
                fancy:fb_radius="64dp">
            </mehdi.sakout.fancybuttons.FancyButton>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/timeSetBtn"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                app:layout_constraintStart_toEndOf="@+id/shareBtn"
                app:layout_constraintTop_toBottomOf="@+id/colorLineMenu"
                fancy:fb_defaultColor="@color/colorAccent"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_iconResource="@drawable/timer"
                fancy:fb_radius="64dp">
            </mehdi.sakout.fancybuttons.FancyButton>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/aboutBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/supportBtn"
                fancy:fb_borderColor="@color/colorAccent"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorTransperent"
                fancy:fb_focusColor="@color/colorAccent"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/about"
                fancy:fb_textColor="#FFFFFF">

            </mehdi.sakout.fancybuttons.FancyButton>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/supportBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vkBtn"
                fancy:fb_borderColor="@color/colorAccent"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorTransperent"
                fancy:fb_focusColor="@color/colorAccent"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/donate"
                fancy:fb_textColor="#FFFFFF" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/vkBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siteBtn"
                fancy:fb_borderColor="@color/colorAccent"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorTransperent"
                fancy:fb_focusColor="@color/colorAccent"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/vkgroup"
                fancy:fb_textColor="#FFFFFF" >

            </mehdi.sakout.fancybuttons.FancyButton>

            <Switch
                android:id="@+id/wheelSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/drivingmode"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareBtn" />

            <Switch
                android:id="@+id/soundSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/sound"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wheelSwitch" />

            <ImageView
                android:id="@+id/colorLineMenuBottom"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutBtn"
                fancy:srcCompat="@color/colorAccent" />

            <ImageView
                android:id="@+id/colorLineMenuCenter"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soundSwitch"
                fancy:srcCompat="@color/colorAccent" />


        </android.support.constraint.ConstraintLayout>


    </ScrollView>



</android.support.constraint.ConstraintLayout>
